--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://Igbo-Association-Northwest-Ireland.github.io/ICANWI",
+  "homepage": "http://IgboCulturalAssociationNorthwestIreland.github.io/icanwi",
   "name": "facepage",
   "version": "0.1.0",
   "private": true,
